--- a/item-service-dev.yml
+++ b/item-service-dev.yml
@@ -9,6 +9,10 @@ spring:
   cloud:
     config:
       override-none: true
+  sleuth:
+    sampler:
+      probability: 0.1
+
 server:
   port: 8001
 
