--- a/user-service-dev.yml
+++ b/user-service-dev.yml
@@ -9,6 +9,9 @@ spring:
   cloud:
     config:
       override-none: true
+  sleuth:
+    sampler:
+      probability: 0.1
 
 server:
   port: 8101
@@ -27,3 +30,4 @@ management:
     web:
       exposure:
         include: refresh
+
